fixed insa section mobile height issue

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -368,7 +368,7 @@ body {
 
   .instagram {
     background: #262626;
-    height: 100vh;
+    height: 40rem;
     box-shadow: 0px 2px 5px hsl(0, 0, 0.5);
     .title {
       text-align: center;
